<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <RelativeLayout
        android:id="@+id/reletivelayout"
        style="@style/titlestype" >

        <LinearLayout
            android:id="@+id/LinTopBack"
            style="@style/titlebutton"
            android:layout_marginLeft="5.0dp" >
            <ImageView
				style="@style/titleimagesyple"
                android:src="@drawable/back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goback"
				style="@style/titletextstyle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
        </LinearLayout>
        
        <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="目录"
             style="@style/toptip"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"/>
        
    </RelativeLayout>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scollview">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="@color/white">
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:background="@color/white">
	            
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
	                android:id="@+id/lindoc">
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/filedoc"/>
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="3dp"
	                    android:textSize="17sp"
	                    android:text="@string/fileDOC"/>
	            </LinearLayout>
	            
	            <ImageView 
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/gridviewbackground"/>
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
	                android:id="@+id/linppt">
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/fileppt"/>
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="3dp"
	                    android:textSize="17sp"
	                    android:text="@string/filePPT"/>
	            </LinearLayout>
	            
	            <ImageView 
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/gridviewbackground"/>
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
	                android:id="@+id/linxls">
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/filexls"/>
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="3dp"
	                    android:textSize="17sp"
	                    android:text="@string/fileXLS"/>
	            </LinearLayout>
	        </LinearLayout>
	        
	        <ImageView 
	             android:layout_width="match_parent"
	             android:layout_height="1dp"
	             android:background="@color/gridviewbackground"/>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:background="@color/white">
	            <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:background="@color/white">
	            
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
	                android:id="@+id/linpdf">
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/filepdf"/>
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="3dp"
	                    android:textSize="17sp"
	                    android:text="@string/filePDF"/>
	            </LinearLayout>
	            
	            <ImageView 
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/gridviewbackground"/>
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
	                android:id="@+id/lintxt">
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/filetxt"/>
	                <TextView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/fileTXT"
	                    android:textSize="17sp"
	                    android:layout_marginTop="3dp"/>
	            </LinearLayout>
	            
	            <ImageView 
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/gridviewbackground"/>
	            <LinearLayout 
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1"
	                android:orientation="vertical"
	                android:gravity="center"
	                android:paddingTop="20dp"
	                android:paddingBottom="20dp"
					android:id="@+id/linPicPhoto">
					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@drawable/filepicturelib"/>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/filePicture"
						android:textSize="17sp"
						android:layout_marginTop="3dp"/>
	            </LinearLayout>
	        </LinearLayout>
	            
	        </LinearLayout>
		    <ImageView 
			    android:layout_width="match_parent"
			    android:layout_height="1dp"
			    android:background="@color/gridviewbackground"/>
		    <com.android.yawei.jhoa.ui.MyListView 
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:id="@+id/filelist"/>
	    </LinearLayout>
    </ScrollView>
</LinearLayout>
